# tauri-wire

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/tauri-wire/: Cargo.toml
crates/tauri-wire-derive/: Cargo.toml
crates/tauri-wire-derive/src/: lib.rs
crates/tauri-wire/benches/: throughput.rs
crates/tauri-wire/examples/: market_data.rs  sensor_stream.rs
crates/tauri-wire/src/: decode.rs  lib.rs  protocol.rs  stream.rs
crates/tauri-wire/tests/: derive_test.rs
crates/tauri-wire/ts/: decoder.ts  package.json  tsconfig.json
