[package]
name = "tauri-wire"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Zero-parse binary wire protocol for Tauri IPC. Streaming, generic, transport-agnostic."
readme = "../../README.md"
repository = "https://github.com/user/tauri-wire"
keywords = ["tauri", "ipc", "binary", "streaming", "wire-protocol"]
categories = ["gui", "encoding", "network-programming"]

[features]
default = []
derive = ["dep:tauri-wire-derive"]

[dependencies]
tauri-wire-derive = { version = "0.1.0", path = "../tauri-wire-derive", optional = true }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[[example]]
name = "market_data"

[[example]]
name = "sensor_stream"
